# snacked-tracker-project

./: README.md  db.sqlite3  pyproject.toml
snack_tracker_project/: settings.py  urls.py
snacks/: models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
templates/: snack_detail.html
