[tool.poetry]
name = "snacked-tracker-project"
version = "0.1.0"
description = ""
authors = ["Glenn Elliron Clark <Elliron.Clark@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.7b0"
Django = "^3.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
